# genai-dev

./: llmsentbot.ipynb  rag_in_short.ipynb
rag_to_mcp/: pyproject.toml
rag_to_mcp/src/rag_to_mcp/: server.py
