[project]
name = "rag-to-mcp"
version = "0.1.0"
description = "Minimal MCP server with a ping tool"
requires-python = ">=3.9"
readme = ""
dependencies = [
  "mcp",
]

[project.scripts]
rag-mcp-server = "rag_to_mcp.server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

